<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_16dp"
    tools:context=".ForecastFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/main_info"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_day_forecast"
            android:textSize="@dimen/dimen_24sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_city_name"
            android:text="@string/weather"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_geo_coord"
            android:text="@string/geolocation"
            android:textSize="@dimen/dimen_18sp"
            android:textStyle="italic"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_forecast"
        android:layout_below="@id/main_info"
        android:layout_marginTop="@dimen/dimen_20dp">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>